--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" type="text/css" href="./css/styles.css">
 </head>
 <body>
+    <div id="welcome-section">
+
+
+    </div>
 
 
 
