Add section tag with id="sections"

--- a/index.html
+++ b/index.html
@@ -9,8 +9,15 @@
 </head>
 <body>
     <div id="welcome-section">
+        <p><h1>Hello I am Abass Olanrewaju Wasiu</h1>a photographer</p>
+
+    </div>
+
+    <div id="sections">
+        <section id="projects">
 
 
+        </section>
     </div>
 
 
