Add div-tag for project with class="project-tiles"

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 
     <div id="sections">
         <section id="projects">
+            <div class="project-tile">
 
-
+            </div>
         </section>
     </div>
 
