Add link to my projects

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <div id="sections">
         <section id="projects">
+            <a href="https://github.com/Lanr3waju/Technical-Documentation-Page.git">My Technical-Documentation-Page</a>
             <div class="project-tile">
 
             </div>
