Add nav-tag with id="navbar"

--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
         </section>
     </div>
 
+    <div id="nav-bar">
+        <nav id="navbar">
+
+        </nav>
+    </div>
+
 
 
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
