Add a navbar link to other sections of the page

--- a/index.html
+++ b/index.html
@@ -17,6 +17,33 @@
         <section id="projects">
             <a href="https://github.com/Lanr3waju/Technical-Documentation-Page.git">My Technical-Documentation-Page</a>
             <div class="project-tile">
+                <p>hhhhhhh</p>
+                <p>hhhhhhh</p>
+                <p>hhhhhhh</p>
+                <p>hhhhhhh</p>
+                <p>hhhhhhh</p>
+                <p>hhhhhhh</p>
+                <p>hhhhhhh</p>
+                <p>hhhhhhh</p>
+                <p>hhhhhhh</p>
+                <p>hhhhhhh</p>
+                <p>hhhhhhh</p>
+                <p>hhhhhhh</p>
+                <p>hhhhhhh</p>
+                <p>hhhhhhh</p>
+                <p>hhhhhhh</p>
+                <p>hhhhhhh</p>
+                <p>hhhhhhh</p>
+                <p>hhhhhhh</p>
+                <p>hhhhhhh</p>
+                <p>hhhhhhh</p>
+                <p>hhhhhhh</p>
+                <p>hhhhhhh</p>
+                <p>hhhhhhh</p>
+                <p>hhhhhhh</p>
+                <p>hhhhhhh</p>
+                <p>hhhhhhh</p>
+                <p>hhhhhhh</p>
 
             </div>
         </section>
@@ -24,7 +51,7 @@
 
     <div id="nav-bar">
         <nav id="navbar">
-
+            <a href="#projects">Projects</a>
         </nav>
     </div>
 
