--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
 
     <div id="nav-bar">
         <nav id="navbar">
-            <a href="#projects">Projects</a>
+            <a href="#projects">Works</a>
+            <a id="profile-link" href="https://www.github.com/Lanr3waju" target=_blank>Contact</a>
         </nav>
     </div>
 
