Format code with appropriate config

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
       <p id="sub-text">a photographer</p>
     </div>
 
-    <div id="work-text"><h1 id="text">Work Section</h1></div>
+    <section id="work-text"><h2 id="text">Work Section</h2></section>
 
-    <div id="projects">
-      <h1 id="project-title">These are some of my Works</h1>
+    <section id="projects">
+      <h2 id="project-title">These are some of my Works</h2>
       <div class="project-tile">
         <div class="work-img">
           <img src="./img/work1.jpg" alt="Picture" />
@@ -61,7 +61,7 @@
           <div class="description">Macro</div>
         </div>
       </div>
-    </div>
+    </section>
 
     <div id="insta-link">
       <a
@@ -73,10 +73,10 @@
       >
     </div>
 
-    <div id="author-section">
+    <section id="author-section">
       <div id="about-me"></div>
 
-      <h1>Lets work together...</h1>
+      <h2>Lets work together...</h2>
       <p id="auth">how do you like your frames?</p>
       <div id="auth-links">
         <ul>
@@ -95,7 +95,6 @@
               ><span class="text"><i class="fab fa-instagram"></i> Abass.Abdul.Wasi</span></a
             >
           </li>
-          <!-- <li><img class="icon" src="./img/github-logo-icon-16166.png" alt="git-icon"></li> -->
           <li class="translate">
             <a href="https://github.com/Lanr3waju?tab=repositories"
               ><span class="text"><i class="fab fa-github"></i> Lanr3waju</span></a
@@ -103,7 +102,7 @@
           </li>
         </ul>
       </div>
-    </div>
+    </section>
 
     <div class="box"></div>
 
