--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personal Portfolio Page</title>
     <link rel="stylesheet" type="text/css" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <script src="https://kit.fontawesome.com/87c7983292.js" crossorigin="anonymous"></script>
   </head>
   <body>
@@ -79,7 +85,7 @@
       <h2>Lets work together...</h2>
       <p id="auth">how do you like your frames?</p>
       <div id="auth-links">
-        <ul>
+        <ul class="flekz">
           <li class="translate">
             <a href="https://web.facebook.com/profile.php?id=100073905613131"
               ><span class="text"><i class="fab fa-facebook"></i> Abdul-Wasi Lanrewaju Abass</span>
@@ -112,7 +118,5 @@
         <span id="copy">for Abass Abdul Wasi</span>
       </p>
     </footer>
-
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
 </html>
